fix: overflow-x bug

--- a/style/style.scss
+++ b/style/style.scss
@@ -32,11 +32,12 @@
 html {
   max-width: 2000px;
   margin: auto;
+  overflow-x: hidden;
 }
 
 body {
   background: $black;
-  overflow-x: hidden;
   position: relative;
+  overflow-x: hidden;
   transition: 300ms ease-in-out;
 }
